@@ -222,7 +222,7 @@ bool ApplicationCacheStorage::executeSQLCommand(const String& sql)
     return result;
 }
 
-static const int SchemaVersion = 1;
+static const int SchemaVersion = 2;
     
 void ApplicationCacheStorage::verifySchemaVersion()
 {
@@ -278,7 +278,7 @@ void ApplicationCacheStorage::openDatabase(bool createIfDoesNotExist)
                       "cache INTEGER NOT NULL ON CONFLICT FAIL)");
     executeSQLCommand("CREATE TABLE IF NOT EXISTS CacheEntries (cache INTEGER NOT NULL ON CONFLICT FAIL, type INTEGER, resource INTEGER NOT NULL)");
     executeSQLCommand("CREATE TABLE IF NOT EXISTS CacheResources (id INTEGER PRIMARY KEY AUTOINCREMENT, url TEXT NOT NULL ON CONFLICT FAIL, "
-                      "statusCode INTEGER NOT NULL, responseURL TEXT NOT NULL, headers TEXT, data INTEGER NOT NULL ON CONFLICT FAIL)");
+                      "statusCode INTEGER NOT NULL, responseURL TEXT NOT NULL, mimeType TEXT, textEncodingName TEXT, headers TEXT, data INTEGER NOT NULL ON CONFLICT FAIL)");
     executeSQLCommand("CREATE TABLE IF NOT EXISTS CacheResourceData (id INTEGER PRIMARY KEY AUTOINCREMENT, data BLOB)");
 
     // When a cache is deleted, all its entries and its whitelist should be deleted.
@@ -405,7 +405,7 @@ bool ApplicationCacheStorage::store(ApplicationCacheResource* resource, unsigned
     
     String headers = String::adopt(stringBuilder);
     
-    SQLiteStatement resourceStatement(m_database, "INSERT INTO CacheResources (url, statusCode, responseURL, headers, data) VALUES (?, ?, ?, ?, ?)");
+    SQLiteStatement resourceStatement(m_database, "INSERT INTO CacheResources (url, statusCode, responseURL, headers, data, mimeType, textEncodingName) VALUES (?, ?, ?, ?, ?, ?, ?)");
     if (resourceStatement.prepare() != SQLResultOk)
         return false;
     
@@ -414,6 +414,8 @@ bool ApplicationCacheStorage::store(ApplicationCacheResource* resource, unsigned
     resourceStatement.bindText(3, resource->response().url());
     resourceStatement.bindText(4, headers);
     resourceStatement.bindInt64(5, dataId);
+    resourceStatement.bindText(6, resource->response().mimeType());
+    resourceStatement.bindText(7, resource->response().textEncodingName());
 
     if (!executeStatement(resourceStatement))
         return false;
@@ -489,7 +491,7 @@ void ApplicationCacheStorage::storeNewestCache(ApplicationCacheGroup* group)
 PassRefPtr<ApplicationCache> ApplicationCacheStorage::loadCache(unsigned storageID)
 {
     SQLiteStatement cacheStatement(m_database, 
-                                   "SELECT url, type, CacheResourceData.data FROM CacheEntries INNER JOIN CacheResources ON CacheEntries.resource=CacheResources.id "
+                                   "SELECT url, type, mimeType, textEncodingName, headers, CacheResourceData.data FROM CacheEntries INNER JOIN CacheResources ON CacheEntries.resource=CacheResources.id "
                                    "INNER JOIN CacheResourceData ON CacheResourceData.id=CacheResources.data WHERE CacheEntries.cache=?");
     if (cacheStatement.prepare() != SQLResultOk) {
         LOG_ERROR("Could not prepare cache statement, error \"%s\"", m_database.lastErrorMsg());
@@ -507,11 +509,14 @@ PassRefPtr<ApplicationCache> ApplicationCacheStorage::loadCache(unsigned storage
         unsigned type = (unsigned)cacheStatement.getColumnInt64(1);
 
         Vector<char> blob;
-        cacheStatement.getColumnBlobAsVector(2, blob);
+        cacheStatement.getColumnBlobAsVector(5, blob);
         
         RefPtr<SharedBuffer> data = SharedBuffer::adoptVector(blob);
         
-        ResourceResponse response(url, "text/html", data->size(), "UTF-8", "");
+        String mimeType = cacheStatement.getColumnText(2);
+        String textEncodingName = cacheStatement.getColumnText(3);
+        
+        ResourceResponse response(url, mimeType, data->size(), textEncodingName, "");
         
         RefPtr<ApplicationCacheResource> resource = ApplicationCacheResource::create(url, response, type, data.release());
 
